<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.example.newsapp.core.data.NewsModel" />
        <variable
            name="clickListener"
            type="com.example.newsapp.views.list.NewsAdapter.NewsItemListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background_shape"
        android:layout_margin="2dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        android:onClick="@{() -> clickListener.onClick(item)}"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="296dp"
                android:contentDescription="@string/article_img"
                android:scaleType="centerCrop"
                android:src="@drawable/image_place_holder"
                app:imageUrl="@{item.urlToImage}"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/some_title"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@{item.title}"
                app:layout_constraintTop_toBottomOf="@id/item_image"/>

            <TextView
                android:id="@+id/item_source_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/some_source"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="12sp"
                android:textColor="@color/grey_search_color"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@{item.source.name}"
                app:layout_constraintTop_toBottomOf="@id/item_title_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>